# linkedin-rs

./: .gitignore  Justfile  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml
backlog/tasks/: task-0001 - Download-LinkedIn-APK-via-apkeep.md  task-0005 - Decode-resources-and-manifest-with-apktool.md  task-0006 - Document-architecture-and-API-endpoints.md  task-0007 - Map-complete-API-endpoint-catalog-from-decompiled-code.md  task-0008 - Document-OAuth2-OIDC-auth-flow-in-detail.md  task-0009 - Extract-data-models-DTOs-from-Pegasus-layer.md  task-0010 - Document-Rest.li-protocol-specifics-for-API-replication.md  task-0011 - Analyze-React-Native-JS-bundle-for-API-calls.md  task-0012 - Document-X-LI-Track-header-and-device-fingerprinting-requirements.md  task-0013 - Map-real-time-messaging-and-notification-system.md  task-0014 - Reverse-engineer-media-upload-protocol.md  task-0015 - Document-rate-limiting-and-retry-behavior.md  (+27 more)
linkedin/linkedin-api/: Cargo.toml
linkedin/linkedin-api/src/: auth.rs  client.rs  models.rs
linkedin/linkedin-api/tests/: smoke.rs
linkedin/linkedin-cli/: Cargo.toml
linkedin/linkedin-cli/src/: main.rs
re/: architecture_overview.md  comments.md  connection_request.md  device_fingerprinting.md  invitations.md  js_bundle_analysis.md  manifest_analysis.md  media_upload.md  model_corrections.md  pegasus_models.md  profile_visit.md  rate_limiting.md  reactions.md  realtime_system.md  restli_protocol.md  search_protocol.md  send_message.md  serialization_edge_cases.md  tls_configuration.md
scripts/: install-hooks.sh
