[package]
name = "linkedin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client — uses rustls (default TLS backend).
# TODO: Switch to boring-tls when reqwest adds the feature flag,
# to match Chrome/Cronet's BoringSSL TLS fingerprint (see re/tls_configuration.md).
reqwest = { version = "0.13", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
iana-time-zone = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
